# jogo-da-cabeca

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Assets/Levels/: Level.txt  Paths.txt
Assets/Sprites/Ghosts/Blinky/: Blinky.json
Assets/Sprites/Ghosts/Clyde/: Clyde.json
Assets/Sprites/Ghosts/Inky/: Inky.json
Assets/Sprites/Ghosts/Pinky/: Pinky.json
Assets/Sprites/Pacman/: Pacman.json
Source/: Game.cpp  Game.h  Json.h  Main.cpp  Math.h
Source/Actors/: Actor.cpp  Actor.h  Item.cpp  Item.h  Pacman.cpp  Pacman.h  PathNode.cpp  PathNode.h  Wall.cpp  Wall.h
Source/Actors/Ghost/: Ghost.cpp  Ghost.h
Source/Actors/Ghost/States/: ChaseState.cpp  ChaseState.h  DeadState.cpp  DeadState.h  FrightenedState.cpp  FrightenedState.h  GhostState.cpp  GhostState.h  ScatterState.cpp  ScatterState.h
Source/Components/: Component.cpp  Component.h  RigidBodyComponent.cpp  RigidBodyComponent.h
Source/Components/AIComponents/: FSMComponent.cpp  FSMComponent.h  FSMState.cpp  FSMState.h
Source/Components/ColliderComponents/: AABBColliderComponent.cpp  AABBColliderComponent.h  CircleColliderComponent.cpp  CircleColliderComponent.h
Source/Components/DrawComponents/: DrawAnimatedComponent.cpp  DrawAnimatedComponent.h  DrawComponent.cpp  DrawComponent.h  DrawPolygonComponent.cpp  DrawPolygonComponent.h  DrawSpriteComponent.cpp  DrawSpriteComponent.h
